RESOLVED FIXED158134
Certain NetworkResourceLoader callbacks can deref a null m_networkLoad
https://bugs.webkit.org/show_bug.cgi?id=158134
Summary Certain NetworkResourceLoader callbacks can deref a null m_networkLoad
Brady Eidson
Reported 2016-05-26 16:14:21 PDT
NetworkResourceLoader::continueWillSendRequest can deref a null m_networkLoad We have no idea how to reproduce this, but we do know its happening.
Attachments
Patch (2.00 KB, patch)
2016-05-26 16:16 PDT, Brady Eidson
no flags
Patch (2.53 KB, patch)
2016-05-26 16:38 PDT, Brady Eidson
achristensen: review+
buildbot: commit-queue-
Archive of layout-test-results from ews126 for ios-simulator-wk2 (801.64 KB, application/zip)
2016-05-26 17:21 PDT, Build Bot
no flags
Archive of layout-test-results from ews104 for mac-yosemite-wk2 (799.60 KB, application/zip)
2016-05-26 17:33 PDT, Build Bot
no flags
Patch v1 (1.90 KB, patch)
2016-05-26 19:12 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-05-26 16:15:01 PDT
Brady Eidson
Comment 2 2016-05-26 16:16:35 PDT
Brady Eidson
Comment 3 2016-05-26 16:34:49 PDT
Retitling to: Certain NetworkResourceLoader callbacks can deref a null m_networkLoad Also found in rdar: <rdar://problem/25289012>
Brady Eidson
Comment 4 2016-05-26 16:38:53 PDT
Build Bot
Comment 5 2016-05-26 17:21:35 PDT
Comment on attachment 279924 [details] Patch Attachment 279924 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1388205 New failing tests: http/tests/cache/disk-cache/disk-cache-302-status-code.html http/tests/cache/disk-cache/disk-cache-redirect.html http/tests/cache/redirect-referer.html http/tests/cache/disk-cache/redirect-chain-limits.html
Build Bot
Comment 6 2016-05-26 17:21:37 PDT
Created attachment 279928 [details] Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.4
Build Bot
Comment 7 2016-05-26 17:33:15 PDT
Comment on attachment 279924 [details] Patch Attachment 279924 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/1388273 New failing tests: http/tests/cache/disk-cache/disk-cache-302-status-code.html http/tests/cache/disk-cache/disk-cache-redirect.html http/tests/cache/redirect-referer.html http/tests/cache/disk-cache/redirect-chain-limits.html
Build Bot
Comment 8 2016-05-26 17:33:17 PDT
Created attachment 279929 [details] Archive of layout-test-results from ews104 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Brady Eidson
Comment 9 2016-05-26 19:10:54 PDT
It's obvious why the layout test failures cropped up. Fixing.
Brady Eidson
Comment 10 2016-05-26 19:12:33 PDT
Created attachment 279934 [details] Patch v1
WebKit Commit Bot
Comment 11 2016-05-26 20:18:10 PDT
Comment on attachment 279934 [details] Patch v1 Clearing flags on attachment: 279934 Committed r201444: <http://trac.webkit.org/changeset/201444>
Note You need to log in before you can comment on or make changes to this bug.