Certain NetworkResourceLoader callbacks can deref a null m_networkLoad. https://bugs.webkit.org/show_bug.cgi?id=158134

Reviewed by Alex Christensen.

It's legit for m_networkLoad to be null in these callbacks.

We need null checks, just like we have in many other callbacks in this class.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::continueWillSendRequest):
(WebKit::NetworkResourceLoader::continueCanAuthenticateAgainstProtectionSpace):


Canonical link: https://commits.webkit.org/176247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201444 268f45cc-cd09-0410-ab3c-d52691b4dbfc